--- a/ingredients.css
+++ b/ingredients.css
@@ -4,7 +4,7 @@
 .bun-top {
   height: 70px;
   width: 60%;
-  background: #e5b05a;
+  background: #c47a01;
   border-radius: 100px 100px 20px 20px;
   border-bottom: solid 10px rgba(0,0,0,.1);
 }
@@ -23,29 +23,12 @@
   border-bottom: solid 2px rgba(0,0,0,.1);
 }
 
-.meatball {
-  height: 60px;
-  width: 70px;
-  background: #74380d;
-  border-radius: 50px;
-  display: inline-block;
-  vertical-align: top;
-}
-
 .patty {
-  height: 35px;
+  height: 45px;
   width: 65%;
-  background: #ad370b;
+  background: #973511;
   border-radius: 15px;
   border-bottom: solid 2px rgba(0,0,0,.1);
-}
-
-.pickle {
-  height: 30px;
-  width: 50%;
-  background: #3ac67d;
-  border-radius: 0 0 100px 100px;
-  border-bottom: solid 10px #2d9961;
 }
 
 .onion {
@@ -57,7 +40,7 @@
 .bun-bottom {
   height: 35px;
   width: 60%;
-  background: #e5b05a;
+  background: #c47a01;
   border-radius: 20px 20px 40px 40px;
   border-top: solid 8px rgba(0,0,0,.1)
 }
